CSS/how-we-work.css
.container {
    /* width: 1920px; */
    height: 971px;
    margin-top: 250px;
}

.logo {
    font-family: 'Neue Machina';
    width: 436px;
    height: 58px;
    font-size: 60px;
    padding: 60px;
    color: #2F353F;
    margin: 0px 0px 20px 30px;
}

#flexbox {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(541px, 1fr));
    gap: 40px;
}

.box- {
    font-family: 'Neue Machina';
    border: 1px;
    width: 541px;
    height: 220px;
    padding: 30px;
    font-size: 26px;
    color: #2F353F;
}

.box {
    font-family: 'Neue Machina';
    border: 1px solid #909398;
    width: 541px;
    height: 220px;
    padding: 30px;
    font-size: 26px;
    border-radius: 40px;
    color: #2F353F;
}

.text_box {
    font-family: 'Gilroy';
    font-size: 24px;
    color: #2F353FB2;
}

.purple {
    font-family: 'Neue Machina';
    border: 1px solid #909398;
    width: 541px;
    height: 220px;
    padding: 30px;
    font-size: 26px;
    border-radius: 40px;
    color: #2F353F;
}

.box:hover {
    background: #7876F2;
    color: #ffff;
    transition: 0.5s;
    transform: scaleX(1.1);
    transform: scaleY(1.3);
    top: 50px;
    left: 80px;
}

.box-box {
    margin: 50px 40px 40px 50px;
}

.cicle {
    font-family: 'Neue Machina';
    width: 280px;
    height: 280px;
    background-color: #ffff;
    border-radius: 50%;
    font-size: 30px;
    text-align: center;
    margin: 80px 0px 0px 80px;
}

.how {
    margin-bottom: 350px;
}

@media (max-width: 1080px) {

    .how {
        width: 90%;
        max-width: 1080px;
    }

    .container {
        width: 100%;
        max-width: 1080px;
        height: auto;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .logo {
        font-family: 'Neue Machina';
        width: 100%;
        height: auto;
        font-size: 40px;
        color: #2F353F;
        margin: auto;
        text-align: left;
        padding: 0;
    }

    #flexbox {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
    }

    .box- {
        font-family: 'Neue Machina';
        max-width: 100%;
        height: 220px;
        font-size: 30px;
        color: #2F353F;
        text-align: left;
        padding: 0px;
        margin-top: 20px;
    }

    .box- > .box-box {
        margin: 0;
    }

    .box {
        font-family: 'Neue Machina';
        border: 1px solid #909398;
        max-width: 100%;
        height: auto;
        padding: 5px;
        font-size: 20px;
        border-radius: 40px;
        color: #2F353F;
    }

    .box-box {
        margin: 10px 8px 8px 10px;
    }

    .text_box {
        font-family: 'Gilroy';
        font-size: 24px;
        color: #2F353FB2;
    }

    .purple {
        font-family: 'Neue Machina';
        border: 1px solid #909398;
        width: 80%;
        height: 220px;
        padding: 30px;
        font-size: 26px;
        border-radius: 40px;
        color: #2F353F;
    }

    .box:hover {
        background: #7876F2;
        color: #ffff;
        transition: 0.5s;
        transform: scaleX(1.1);
        transform: scaleY(1.3);
        top: 50px;
        left: 80px;
    }

    .cicle {
        font-family: 'Neue Machina';
        width: 280px;
        height: 280px;
        background-color: #ffff;
        border-radius: 50%;
        font-size: 30px;
        text-align: center;
        margin: auto;
        margin-top: 50px;
    }

    .how {
        margin-bottom: 350px;
    }
}

